2006-09-11  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/util.cc (get_small_font): Added support to get the
	osso-SmallFont from the theme instead of a fixed font
	definition. It uses a fixed definition just in case the theme has
	not osso-SmallFont definition.
	(make_small_text_view): Modified the call to the get_small_font
	function.
	(make_small_label): Modified the call to the get_small_font
	function. (N32249)

	* src/main.h, src/main.cc (get_main_trail): New function, required
	to access the main_trail from other objects.
	* util.cc (global_package_list_key_pressed): Added, this function
	is a callback that controls the focus movement between the
	main_trail and the package list. It is connected to the
	key-press-event of the package list treeview. If we are in the
	first row and press up hardkey we send the focus to the last
	button in the main_trail. It also avoids left and right movements
	in the treeview.
	(make_global_package_list): Added the connection of the of the
	key-press-event to its new callback. (N27946)

2006-09-08  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/util.h, src/util.cc (reset_progress_was_cancelled): New, to
	reset the progress_cancelled flag which used to be done in
	create_progress.
	(create_progress): Don't reset it here.
	(show_progress): Call reset_progress_was_cancelled here.
	* src/apt-worker-client.cc (apt_worker_install_package_cont): Call
	reset_progress_was_cancelled here to be prepared for the
	spontaneous showing of the dialog. (N35475)

2006-09-07  Marius Vollmer  <marius.vollmer@nokia.com>

	* debian/postinst: Make /etc/sudoers writable before appending to
	it. (N39538)

	* 00-smallcache: Use the "Small-Cache-Limit" option instead of
	"Cache-Limit", available in apt 0.6.42.3osso17.  (N31929, N32959)

2006-09-06  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 4.30.
	
	* src/util.h, src/util.cc (skip_whitespace): New.
	(all_white_space): Make it return bool, not int.  Reimplemented